--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
     <html lang="en">
         <head>
           <meta charset="utf-8" />
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
           <!--css and bootstrap-->
@@ -51,7 +51,7 @@
         <!--little content top left-->
         <div class="container-fluid">
           <div class="reload-page align-middle">
-            <a href="frontpage.htm">
+            <a href="index.htm">
                 <img class="burger-reload-page img-responsive" src="burger-3.png" alt="Go back to homepage"
                      width="50"
                      height="50"
