--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,8 @@
               <a href="#what-is-it" id="btn-showmehow">Show me more!</a>
               <div class="what text-center"><a id="what-is-it"><p>What is it?</p></a></div>
             </div>
-
+            <!--speechbubble!-->
+            <img class="speechbubble image-fluid" src="pixel-speech-bubble (1).gif" style="width:500px;height:70px;">
 
 
 
